<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gestion Des Biens</string>
    <string name="hello_admin">Hello Admin!</string>
    <string name="get_transations">Transactions</string>
    <string name="get_type">Type</string>
    <string name="get_transport">Transport</string>
    <string name="get_items">Items</string>
    <string name="get_personnel">Personnel</string>
    <string name="get_locations">Locations</string>
    <string name="get_centers">Centers</string>
    <string name="get_salles">Salles</string>
    <string name="get_users">Users</string>
    <string name="get_groups">Groups</string>
    <string name="placeholder">Placeholder</string>
    <string name="center_name_placeholder">Center name</string>
    <string name="location_name_placeholder">Location name</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Gestion Des Biens</string>
    <string name="title_activity_php_script_test">PhpScriptTest</string>
    <string name="title_activity_admin">Admin Activity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="hello_user">Hello User!</string>
    <string name="title_activity_center">Centers</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_locations">Locations</string>
    <string name="title_activity_type">Type</string>
    <string name="title_activity_personnel">Personnel</string>
    <string name="title_activity_salles">Salles</string>
    <string name="title_activity_users">Users</string>
    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_transport">Transport</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="title_activity_items">Items</string>
    <string name="title_activity_user_transaction">Users Transactions</string>
    <string name="title_activity_edit_transaction_details">EditTransactionDetails</string>

    <string-array name="TransactionStatus">
        <item>Delivered</item>
        <item>Not delivered</item>
    </string-array>

    <string name="title_activity_edit_center_details">EditCenterDetails</string>
    <string name="title_activity_edit_item_details">Edit Item Details</string>
    <string name="title_activity_edit_salle_details">Edit Salle Details</string>
    <string name="title_activity_edit_type_details">Edit Type Details</string>
    <string name="title_activity_edit_location_details">Edit Location Details</string>
    <string name="title_activity_edit_transport_details">Edit Transport Details</string>
    <string name="title_activity_edit_personnel_details">Edit Personnel Details</string>
    <string name="title_activity_edit_user_transaction_details">Edit User Transaction Details</string>

</resources>